# pcap_file_ex

./: .credo.exs  .dialyzer_ignore.exs  .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  mix.exs  release_steps.md  usage-rules.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  dependency-audit.yml  release.yml  rust-ci.yml
bench/: pcap_parsing.exs
config/: config.exs  dev.exs  test.exs
docs/: BUGFIX_STREAM_PCAPNG.md  FIX_LINUX_NANOSECOND_PCAP.md  FIX_MULTI_OS_SUPPORT.md  STREAMING_STATISTICS.md  pre_filtering_feature_spec.md  userguide.md
lib/: pcap_file_ex.ex
lib/pcap_file_ex/: comptime_utils.ex  decoder_registry.ex  display_filter.ex  endpoint.ex  filter.ex  flow.ex  flow_key.ex  flows.ex  format.ex  header.ex  http.ex  http2.ex  interface.ex  merge.ex  native.ex  no_common_datalink_error.ex  packet.ex  pcap.ex  pcap_ng_writer.ex  pcap_writer.ex  pcapng.ex  pre_filter.ex  stats.ex  stream.ex  tcp.ex  timestamp.ex  timestamp_shift.ex  validator.ex
native/pcap_file_ex/: Cargo.toml  deny.toml
native/pcap_file_ex/src/: error.rs  filter.rs  lib.rs  pcap.rs  pcap_writer.rs  pcapng.rs  pcapng_writer.rs  types.rs
specs/: 20251109-multi-file-pcap-timeline-merge.md  20251109-pcap-writer-api.md  20251119-decoder-registry-context-passing.md  20251215-http2-streams-multipart.md  20251215-http2-streams.md  20260105-flows-decoders.md  20260105-hosts-mapping.md  20260105-traffic-flows.md  20260107-stats-visualization.md
test/: merge_test.exs  pcap_file_ex_test.exs  test_helper.exs
test/fixtures/: README.md  capture_heavy_traffic.sh  capture_http2_traffic.sh  capture_mixed_traffic.sh  capture_test_traffic.sh  corrupted.pcap  h2c_client.py  h2c_server.py  (+20 more)
usage-rules/: decoder-registry.md  examples.md  filtering.md  flows-decoders.md  flows.md  formats.md  http.md  http2.md  merging.md  performance.md  writing.md
(+79 files in other folders)
