[package]
name = "pcap_file_ex"
version = "0.3.0"
edition = "2021"

[lib]
name = "pcap_file_ex"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.0"
pcap-file = { git = "https://github.com/lucian/pcap-file", rev = "e60e2f9b614812360fdf6909b90a8b05283adb05" }
thiserror = "1.0"
etherparse = "0.19"
ipnetwork = "0.21"
